# astrojax

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: auto_merge_data_updates.yml  auto_merge_eop_data.yml  ci.yml  docs.yml  release.yml  update_bundled_data.yml  update_eop_data.yml
docs/: index.md
docs/api_reference/: attitude_representations.md  config.md  constants.md  coordinates.md  epoch.md  frames.md  index.md  integrators.md  orbit_dynamics.md  orbits.md  relative_motion.md  time.md
docs/api_reference/attitude_modeling/: dynamics.md  index.md
docs/api_reference/coordinates/: geocentric.md  geodetic.md  index.md  keplerian.md  topocentric.md
docs/api_reference/datasets/: index.md  mpc_asteroids.md
docs/api_reference/eop/: index.md
docs/api_reference/estimation/: ekf.md  index.md  types.md  ukf.md
docs/api_reference/orbit_dynamics/: config.md  density.md  drag.md  ephemerides.md  factory.md  gravity.md  index.md  nrlmsise00.md  srp.md  third_body.md
docs/api_reference/orbit_measurements/: gnss.md  index.md
docs/api_reference/orbits/: index.md  keplerian.md  mean_elements.md
docs/api_reference/relative_motion/: eci_roe.md  eci_rtn.md  hcw_dynamics.md  index.md  oe_roe.md
docs/api_reference/space_weather/: index.md
docs/images/: astrojax_logo.afdesign
docs/user_guide/: attitude_dynamics.md  attitude_representations.md  configuration.md  coordinates.md  eop.md  epoch.md  estimation.md  frames.md  index.md  integrators.md  orbit_dynamics.md  orbit_measurements.md  orbits.md  relative_motion.md  space_weather.md  time.md
docs/user_guide/attitude_modeling/: index.md
docs/user_guide/coordinates/: geocentric.md  geodetic.md  index.md  keplerian.md  topocentric.md
docs/user_guide/datasets/: index.md  mpc_asteroids.md
docs/user_guide/orbit_dynamics/: composition.md  drag.md  ephemerides.md  gravity.md  index.md  srp.md  third_body.md
docs/user_guide/orbits/: anomalies.md  index.md  keplerian.md  mean_osc.md  special_orbits.md
docs/user_guide/relative_motion/: hcw.md  index.md  roe.md  rtn.md
examples/: celestrak_active_propagate.py  close_approach.py  propagate.py  propagate_numerical.py  space_track_propagate.py
notebooks/: ekf_orbit_determination.ipynb  mpc_rendezvous.ipynb
src/astrojax/: __init__.py  _gp_record.py  _sofa_nutation_data.py  config.py  constants.py  epoch.py  sofa.py  time.py  utils.py
src/astrojax/attitude_dynamics/: __init__.py  config.py  euler_dynamics.py  factory.py  gravity_gradient.py  utils.py
src/astrojax/attitude_representations/: __init__.py  _tolerance.py  conversions.py  euler_angle.py  euler_axis.py  quaternion.py  rotation_matrices.py  rotation_matrix.py
src/astrojax/celestrak/: __init__.py  _client.py  _filter.py  _query.py  _responses.py  _types.py
src/astrojax/coordinates/: __init__.py  geocentric.py  geodetic.py  keplerian.py  topocentric.py
src/astrojax/datasets/: __init__.py  _mpc_download.py  _mpc_parsers.py  _mpc_providers.py  _mpc_state.py
src/astrojax/eop/: __init__.py  _download.py  (+4 more)
tests/: conftest.py  test_attitude_dynamics.py  test_attitude_representations.py  test_attitude_representations_brahe.py  test_caching.py  test_celestrak_brahe.py  test_celestrak_client.py  test_celestrak_filter.py  test_celestrak_query.py  test_celestrak_types.py  test_config.py  test_coordinates.py  test_coordinates_brahe.py  test_datasets_mpc.py  test_ecliptic_frames.py  test_eop.py  test_eop_brahe.py  test_eop_caching.py  test_epoch.py  test_estimation.py  test_frames.py  test_frames_gcrf_itrf.py  test_gp_record.py  test_integrators.py  test_integrators_brahe.py  test_nrlmsise00.py  test_nrlmsise00_brahe.py  test_orbit_dynamics.py  test_orbit_dynamics_brahe.py  test_orbit_dynamics_factory.py  test_orbits.py  test_orbits_brahe.py  test_planetary_ephemerides.py  test_planetary_ephemerides_brahe.py  test_relative_motion.py  test_relative_motion_brahe.py  test_sgp4_propagation.py  test_sgp4_satellite.py  test_sgp4_tle.py  test_sofa.py  (+9 more)
(+76 files in other folders)
