[project]
name = "astrojax"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Duncan Eddy", email = "duncan.eddy@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv-build]
data-includes = ["src/astrojax/data/gravity_models/*.gfc"]

[project.optional-dependencies]
extras = [
    "matplotlib",
    "plotly",
    "jupyter",
    "scienceplots",
]

[dependency-groups]
dev = [
    "brahe>=1.0.1",
    "hypothesis>=6.151.2",
    "mkdocstrings-python>=2.0.1",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-order>=1.3.0",
    "zensical>=0.0.19",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["refs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["astrojax"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# JAX type stubs cause false positives for these rules.
# Re-enable incrementally as ty's JAX support matures.
call-non-callable = "ignore"
not-subscriptable = "ignore"
invalid-argument-type = "ignore"
unsupported-operator = "ignore"
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
