[project]
name = "astrojax"
version = "0.3.1"
description = "Astrodynamics written in JAX for massively parallel computation"
readme = "README.md"
authors = [
    { name = "Duncan Eddy", email = "duncan.eddy@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "jax>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv-build]
data-includes = ["src/astrojax/data/gravity_models/*.gfc", "src/astrojax/data/eop/*.txt"]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.9.0"]
cuda13 = ["jax[cuda13]>=0.9.0"]
extras = [
    "matplotlib",
    "plotly",
    "jupyter",
    "scienceplots",
    "cvxpy",
    "highspy",
]

[dependency-groups]
dev = [
    "brahe>=1.1.2",
    "hypothesis>=6.151.2",
    "mkdocstrings-python>=2.0.1",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-order>=1.3.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.15.1",
    "sgp4>=2.22",
    "ty>=0.0.17",
    "zensical>=0.0.19",
]

[tool.pytest.ini_options]
addopts = "-n auto --dist loadfile"
testpaths = [
    "tests",
]
markers = [
    "ci: marks tests that require network access (run in CI only)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["refs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["astrojax"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# JAX type stubs cause false positives for these rules.
# Re-enable incrementally as ty's JAX support matures.
call-non-callable = "ignore"
not-subscriptable = "ignore"
invalid-argument-type = "ignore"
unsupported-operator = "ignore"
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
